--- a/css/style-amber.css
+++ b/css/style-amber.css
@@ -1104,7 +1104,7 @@ body .aio-icon.none {
     list-style: none;
     padding: 0;
     margin: 0;
-    width: 50%;
+    width: 48%;
     float: left;
 }
 
@@ -1434,7 +1434,7 @@ body.no-touch-device .rental-service_item:hover .rs-item_actions a {
 .owl-carousel .owl-controls .owl-nav .owl-prev,
 .owl-carousel .owl-controls .owl-nav .owl-next {
     display: inline-block;
-    color: #c6c6c6;
+    color: #22BCB8;
 }
 
 .owl-carousel .owl-controls i.icon {
@@ -1445,7 +1445,7 @@ body.no-touch-device .rental-service_item:hover .rs-item_actions a {
 }
 
 .owl-carousel .owl-nav > div:hover i.icon {
-    color: #9d8f62;
+    color: #636262;
 }
 
 .owl-carousel .owl-controls .owl-nav > div {
